# pixelpaws

./: .gitignore  README.md  REQUIREMENTS.md  project.md  pyproject.toml  virtual_pet_spec.docx
.github/workflows/: ci.yml
assets/piskel/: Whisker-idle1-20260622-181654.piskel  Whisker-idle1-20260622-185054.piskel  Whisker-lyingdown-20260622-193414.piskel  Whisker-meow-20260622-190506.piskel  Whisker-sad-20260624-111328.piskel  Whisker-sleepingedit-20260622-200605.piskel  Whisker-stretch-20260625-183841.piskel  Whisker-waking up-20260622-215111.piskel  Whisker_stand_idle-20260720-193342.piskel  Whisker_walking_left-20260720-225410.piskel  Whisker_walking_right-20260720-225518.piskel
assets/sounds/: Hiss.m4a  Meow.m4a  Prrp.m4a  Purr2.m4a
src/: animations.py  cat.py  cat_state.py  main.py  sprite_loader.py  stats.py  ui.py
tests/features/: feeding.feature  onboarding.feature  playing.feature  sleeping.feature  state_machine.feature  stats.feature  ui.feature
tests/step_defs/: conftest.py  test_sleeping_steps.py  test_state_machine_steps.py
