[project]
name = "pixelpaws"
version = "0.1.0"
description = "PixelPaws — a virtual pet game with a hand-drawn pixel art tabby cat."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.0.0",
    "pygame>=2.6.1",
    "taskipy>=1.14.1",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-bdd>=7.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.7.0",
]

[tool.black]
target-version = ["py312"]

[tool.pytest.ini_options]
pythonpath = ["."]
bdd_features_base_dir = "tests/features/"

[tool.taskipy.tasks]
test = "pytest --cov=src --cov-report=term-missing"
lint = "ruff check ."
format = "black --check ."
check = "task lint && task format && task test"
run = "python -m src.main"
